# wordlist-constrained-generation

./: .env.example  AGENTS.md  CLAUDE.md  README.md  launch_distributed.py  pyproject.toml
docs/: plan20260104.md  transformers_v5_release_note.md
results/: filtered_500.tsv
scripts/: CI_level_generator.py  filter_es_ES.py  filter_sentences.py  test_sdpa_backend.py  trace_vocab_penalty.py
tests/: test_presence_penalty.py
wordlist_generation/: __init__.py  batch_processor.py  distributed.py  main.py  model_service.py  settings.py
wordlist_generation/api/routers/: batch.py  chat.py  models.py
wordlist_generation/app/: main.py
wordlist_generation/config/: settings.py
wordlist_generation/inference/: generation.py  runner.py  stochastic_beam_search.py
wordlist_generation/inference/vocab_constraints/: constraints.py  logits_processor.py  trie.py
wordlist_generation/moe_fused/: __init__.py  functional.py  modular_qwen3_moe_fused.py
wordlist_generation/moe_fused/grouped_gemm/: autotuning.py  backward_dw.py  forward.py  forward_transposed.py
wordlist_generation/moe_fused/kernels/: indexing.py
wordlist_generation/services/: batch_processor.py  model_service.py
wordlists/: ar.txt  es-419.txt  es.txt  hi.txt  ja.txt  ko.txt  nl.txt  pt.txt  sv.txt  tr.txt  uk.txt  zh-Hans.txt
