[project]
name = "wordlist-generation"
version = "0.2.3"
description = "Vocabulary-constrained generation server (FastAPI + Transformers + lm-format-enforcer)"
readme = "README.md"
requires-python = ">=3.11, <3.13"

dependencies = [
    "accelerate>=0.32.0",
    "fastapi",
    "lm-format-enforcer>=0.11.2",
    "pydantic>=2",
    "python-dotenv",
    "torch",
    "python-multipart",
    "transformers>=5.0.0rc0",
    "tokenizers>=0.20.1",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "ruff",
]

[tool.setuptools.packages.find]
include = ["wordlist_generation*"]
