[project]
name = "wordlist-generation"
version = "0.2.3"
description = "Vocabulary-constrained generation server (FastAPI + Transformers + lm-format-enforcer)"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "accelerate",
    "fastapi",
    "lm-format-enforcer",
    "pydantic",
    "python-dotenv",
    "torch",
    "python-multipart",
    "transformers>=5.0.0rc0",
    "tokenizers",
    "uvicorn",
]

[dependency-groups]
dev = [
    "ruff",
]

[tool.setuptools.packages.find]
include = ["wordlist_generation*"]
