[project]
name = "wordlist-generation"
version = "0.2.3"
description = "Wordlist-constrained generation server (FastAPI + Transformers + lm-format-enforcer)"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "accelerate",
    "fastapi",
    "lm-format-enforcer",
    "pydantic",
    "python-dotenv",
    "torch",
    "python-multipart",
    "transformers>=5.0.0rc0",
    "tokenizers",
    "uvicorn",
    "hqq",
    "optimum-quanto",
]

[dependency-groups]
dev = [
    "ruff",
]

[tool.setuptools.packages.find]
include = ["wordlist_generation*"]

# --- UV GPU CONFIGURATION ---
# This ensures PyTorch is pulled from the NVIDIA-optimized servers
[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cuda" }